<resources>
    <string name="app_name">Homework#1</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="descrip">TODO</string>
    <string name="ecot">สำนักงานคณะกรรมการเลือกตั้ง</string>
    <string name="election_commission_of_thailand">ELECTION COMMISSION OF THAILAND</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="_365">365</string>
    <string name="_24">24</string>
    <string name="_60">60</string>
    <string name="next">Next</string>
    <string name="num13">กรอกเลขบัตรประชาชน</string>
    <string name="check">ตวรจสอบสิทธิเลือกตั้ง</string>
</resources>